[workspace]
members = [
  "embrio",
  "embrio-async",
  "embrio-async/dehygiene",
  "embrio-core",
  "embrio-executor",
  "embrio-native",
  "embrio-nrf51",
  "embrio-util",
  "examples/apps/hello",
  "examples/local",
  "examples/pca10031",
]

default-members = ["embrio"]

[patch.crates-io]
futures-preview = { git = "https://github.com/Nemo157/futures-rs", branch = "waker_changes_no_std" }
futures-util-preview = { git = "https://github.com/Nemo157/futures-rs", branch = "waker_changes_no_std" }
futures-core-preview = { git = "https://github.com/Nemo157/futures-rs", branch = "waker_changes_no_std" }
