[package]
name = "embrio-async"
version = "0.1.0"
authors = ["Wim Looman <wim@nemo157.com>"]
edition = "2018"

[dependencies]
embrio-async-dehygiene = { path = "dehygiene" }
futures-core-preview = { version = "0.3.0-alpha.15", default-features = false }
proc-macro-hack = "0.5.5"
proc-macro-nested = "0.1.3"

[dev-dependencies]
futures-preview = "0.3.0-alpha.15"
pin-utils = "0.1.0-alpha.4"
